ocaml/testsuite/tests/typing-layouts-float64/unboxed_floats.compilers.reference
File "unboxed_floats.ml", line 21, characters 22-28:
21 |   external to_float : float# -> (float[@local_opt]) = "%box_float"
                           ^^^^^^
Error: This construct requires the alpha version of the extension "layouts", which is disabled and cannot be used
